[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/EndScene.gd" type="Script" id=1]
[ext_resource path="res://Sprites/win.png" type="Texture" id=2]
[ext_resource path="res://Sound/KilledBossSound.mp3" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "FadeIn"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "FadeOut"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="EndScene" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 1 )
anims/FadeOut = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 520, 200 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = -32.0
margin_right = 1032.0
margin_bottom = 576.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="Button" parent="Control"]
margin_left = 416.0
margin_top = 336.0
margin_right = 608.0
margin_bottom = 408.0
text = "RETRY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Control"]
margin_left = 416.0
margin_top = 456.0
margin_right = 608.0
margin_bottom = 528.0
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KilledBossSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 4.37

[connection signal="pressed" from="Control/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="Control/Quit" to="." method="_on_Quit_pressed"]
